fix: body overflowed issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,8 @@ body {
   flex-direction: column;
   width: 100vw;
   min-height: 100vh;
+  /* FIXME */
+  overflow-x: hidden;
 }
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
